Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm
@@ -420,9 +420,9 @@ bool ArgumentCoder<WebCore::DictionaryPopupInfo>::decodePlatformData(Decoder& de
     return true;
 }
 
-void ArgumentCoder<Ref<WebCore::Font>>::encodePlatformData(Encoder& encoder, const Ref<WebCore::Font>& font)
+void ArgumentCoder<WebCore::Font>::encodePlatformData(Encoder& encoder, const WebCore::Font& font)
 {
-    const auto& platformData = font->platformData();
+    const auto& platformData = font.platformData();
     encoder << platformData.orientation();
     encoder << platformData.widthVariant();
     encoder << platformData.textRenderingMode();
@@ -491,7 +491,7 @@ static RetainPtr<CTFontRef> createCTFont(CFDictionaryRef attributes, float size,
     return adoptCF(CTFontCreateWithFontDescriptorAndOptions(fontDescriptor.get(), size, nullptr, options));
 }
 
-std::optional<WebCore::FontPlatformData> ArgumentCoder<Ref<WebCore::Font>>::decodePlatformData(Decoder& decoder)
+std::optional<WebCore::FontPlatformData> ArgumentCoder<WebCore::Font>::decodePlatformData(Decoder& decoder)
 {
     std::optional<WebCore::FontOrientation> orientation;
     decoder >> orientation;
